# pkg/docs/swagger.json
@@ -7,9 +7,14 @@
         "version": "1.0"
     },
     "paths": {
-        "/auth/refresh-token": {
-            "post": {
-                "description": "Обновление токена",
+        "/clients/": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получение списка менторов и менти",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,81 +22,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
-                ],
-                "parameters": [
-                    {
-                        "description": "query params",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/inputForms.TokenReqBody"
-                        }
-                    }
+                    "Clients"
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/outputForms.RefreshTokenResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/outputForms.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/outputForms.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/sign-in": {
-            "post": {
-                "description": "Вход",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "parameters": [
-                    {
-                        "description": "query params",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/inputForms.SignInInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/outputForms.AuthResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/outputForms.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/outputForms.ErrorResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.User"
+                            }
                         }
                     }
                 }
@@ -99,70 +39,135 @@
         }
     },
     "definitions": {
-        "gorm.DeletedAt": {
+        "models.Communication": {
             "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "inputForms.SignInInput": {
-            "type": "object",
-            "required": [
-                "login",
-                "password"
-            ],
             "properties": {
                 "login": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
+                "messenger": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Messenger"
+                    }
+                },
+                "parentId": {
+                    "description": "gorm.Model",
+                    "type": "integer"
                 }
             }
         },
-        "inputForms.TokenReqBody": {
+        "models.Education": {
             "type": "object",
-            "required": [
-                "refresh_token"
-            ],
             "properties": {
-                "refresh_token": {
+                "degree": {
                     "type": "string"
+                },
+                "endYear": {
+                    "type": "integer"
+                },
+                "institution": {
+                    "type": "string"
+                },
+                "parentId": {
+                    "description": "gorm.Model",
+                    "type": "integer"
+                },
+                "startYear": {
+                    "type": "integer"
                 }
             }
         },
-        "models.Role": {
+        "models.Messenger": {
             "type": "object",
             "properties": {
+                "communications": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Communication"
+                    }
+                },
                 "name": {
+                    "description": "gorm.Model",
                     "type": "string"
+                }
+            }
+        },
+        "models.OtherInformation": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "string"
+                },
+                "parentId": {
+                    "description": "gorm.Model",
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Report": {
+            "type": "object",
+            "properties": {
+                "fromUserId": {
+                    "description": "gorm.Model",
+                    "type": "integer"
+                },
+                "reportText": {
+                    "type": "string"
+                },
+                "reportTheme": {
+                    "type": "string"
+                },
+                "toUserId": {
+                    "type": "integer"
                 }
             }
         },
         "models.User": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "averageClassPrice": {
+                    "type": "integer"
+                },
+                "communications": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Communication"
+                    }
+                },
+                "dateOfBirthday": {
                     "type": "string"
                 },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
+                "description": {
+                    "type": "string"
+                },
+                "educations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Education"
+                    }
                 },
                 "email": {
-                    "description": "Base information",
+                    "description": "gorm.Model\nBase information",
                     "type": "string"
                 },
                 "firstName": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
+                "isMentor": {
+                    "type": "boolean"
+                },
+                "isVerifyEmail": {
+                    "type": "boolean"
+                },
+                "isVerifyPhone": {
+                    "type": "boolean"
+                },
+                "otherInformation": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.OtherInformation"
+                    }
                 },
                 "patronymic": {
                     "type": "string"
@@ -170,46 +175,58 @@
                 "phone": {
                     "type": "string"
                 },
-                "role": {
+                "profilePicture": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "reports": {
+                    "description": "Жалобы на пользователя",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Role"
+                        "$ref": "#/definitions/models.Report"
                     }
                 },
                 "secondName": {
                     "type": "string"
                 },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "outputForms.AuthResponse": {
-            "type": "object",
-            "properties": {
-                "refresh_token": {
+                "specialization": {
+                    "description": "Mentor information",
                     "type": "string"
                 },
-                "token": {
+                "time": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/models.User"
+                "userReports": {
+                    "description": "Жалобы пользователя",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Report"
+                    }
+                },
+                "workExperiences": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.WorkExperience"
+                    }
                 }
             }
         },
-        "outputForms.ErrorResponse": {
+        "models.WorkExperience": {
             "type": "object",
             "properties": {
-                "error": {
+                "endYear": {
                     "type": "string"
-                }
-            }
-        },
-        "outputForms.RefreshTokenResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
+                },
+                "organization": {
+                    "type": "string"
+                },
+                "parentId": {
+                    "description": "gorm.Model",
+                    "type": "integer"
+                },
+                "startYear": {
                     "type": "string"
                 }
             }
